# Matcha-TTS

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.ja.md  README.md  _config.yaml  data  pyproject.toml  requirements.txt  setup.py  synthesis.ipynb
.github/: dependabot.yml
configs/: train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml  model_summary.yaml
configs/data/: hi-fi_en-US_female.yaml  hi-fi_jsut.yml  joe_spont_only.yaml  ljspeech.yaml  mm-conv.yaml  nabucasa_anna.yaml  nabucasa_darkman.yaml  nabucasa_gosia.yaml  ryan.yaml  tsg2.yaml  vctk.yaml
configs/debug/: default.yaml  profiler.yaml
configs/experiment/: anna.yaml  darkman.yaml  gosia.yaml  hifi_dataset_piper_phonemizer.yaml  joe_det_dur.yaml  joe_stoc_dur.yaml  jsut.yml  ljspeech.yaml  ljspeech_from_durations.yaml  ljspeech_min_memory.yaml  ljspeech_no_prior_loss.yaml  ljspeech_stoc_dur.yaml  mm-conv.yaml  multispeaker.yaml  ryan_det_dur.yaml  ryan_stoc_dur.yaml  tsg2_det_dur.yaml  tsg2_stoc_dur.yaml
configs/hydra/: default.yaml
configs/model/: matcha.yaml
configs/trainer/: ddp.yaml  default.yaml
data/: convert.py  convert.sh
matcha/: VERSION  app.py  cli.py
matcha/data/: text_mel_datamodule.py
matcha/hifigan/: models.py
matcha/models/: baselightningmodule.py  matcha_tts.py
matcha/onnx/: export.py  infer.py
matcha/text/: __init__.py  __main__.py  cleaners.py  jtalk.py  symbols.py
matcha/utils/: generate_data_statistics.py  get_durations_from_trained_model.py  (+2 more)
scripts/: get_durations.sh  transcribe.sh  wer_computer.sh
(+19 files in other folders)
